# insert_me_claude

./: .gitattributes  .gitignore  ARCHITECTURE.md  NOTICE.txt  README.md  ROADMAP.md  pyproject.toml
_tmp_476_qg/04d331b46445d060/: audit.json  audit_result.json  patch_plan.json  validation_result.json
_tmp_476_qg/330e1e58a579795b/: audit.json  audit_result.json  patch_plan.json  validation_result.json
_tmp_476_qg/4d83204e4de18ecd/: audit.json  audit_result.json  patch_plan.json
_tmp_476_qg/60b9f639c741c827/: audit.json  audit_result.json  ground_truth.json  patch_plan.json
_tmp_476_qg/8534e104a0cce8fb/: audit.json  audit_result.json  patch_plan.json  validation_result.json
_tmp_476_qg/915a0627c44c2066/: audit.json  audit_result.json  patch_plan.json
_tmp_phase11_cli/: acceptance_summary.json  generation_diagnostics.json  shortfall_report.json
_tmp_phase11_minimal/: acceptance_summary.json  generation_diagnostics.json  shortfall_report.json
config/: default.toml  project_status.json  strategy_catalog.json  workload_classes.json
corpus_plan/: corpus_plan.json
docs/: artifact_contracts.md  corpus_quality_gate.md  issue_fix_log.md  juliet_design_contract.md  local_target_pilot.md  repro_matrix.md  repro_runbook.md  sandbox_target_guide.md  strategy_catalog.md  support_envelope.md
examples/: README.md  corpus_manifest.json
output/: corpus_phase9_manifest.json  corpus_target_b_manifest.json  stage_timing_report.json
schemas/: adjudication_result.schema.json  audit_record.json  audit_result.schema.json  corpus_plan.schema.json  coverage_result.schema.json  detector_report.schema.json  match_result.schema.json  patch_plan.schema.json  portfolio_acceptance_summary.schema.json  portfolio_index.schema.json  portfolio_plan.schema.json  portfolio_shortfall_report.schema.json  seed.schema.json  strategy_catalog.schema.json  targets.schema.json  validation_result.schema.json  vuln_spec.json
scripts/: characterize_workloads.py  check_plan_stability.py  check_portfolio_stability.py  check_public_status.py  check_reproducibility.py  generate_corpus.py  inspect_target.py  profile_pipeline_stage.py
tests/: __init__.py  test_auditor.py  test_batch.py  test_characterization.py  test_config.py  test_doc_drift.py  test_dry_run.py  test_evaluator.py  test_evaluator_extended.py  test_hardening.py  test_inspect_target.py  test_parallel.py  test_patcher.py  test_patcher_cwe190.py  test_patcher_cwe415_cwe401.py  test_patcher_cwe416.py  test_patcher_cwe476.py  test_placeholder.py  test_planning.py  test_portfolio.py  test_reproducibility.py  test_schemas.py  test_seeder.py  test_validator.py
(+365 files in other folders)
