[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insert_me"
version = "0.1.0.dev0"
description = "Deterministic seeded vulnerability generation for C/C++ source trees"
readme = "README.md"
requires-python = ">=3.10"
# License has not been formally decided. Internal/research use only.
# Do not redistribute without explicit written permission.
license = { text = "Proprietary — license TBD. Internal/research use only." }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Config parsing: tomllib is stdlib in Python 3.11+;
    # tomli is the identical back-port required on Python 3.10.
    "tomli>=1.2.0; python_version < '3.11'",
    # Schema validation
    "jsonschema>=4.17",
]

[project.optional-dependencies]
# Optional LLM adapter dependencies — none required for core operation
llm = [
    # Add LLM SDK here when wiring a real adapter.
    # Example: "anthropic>=0.28" or "openai>=1.0"
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
insert-me = "insert_me.cli:main"

[tool.setuptools]
# Include NOTICE.txt in all distributions so recipients see the license status.
license-files = ["NOTICE.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
